@@ -1,5 +1,7 @@
 2019-06-15  Jay Berkenbilt  <ejb@ql.org>
 
+	* Update CI (Azure Pipelines) to run tests with some sanitizers.
+
 	* Do "ideal integration" with oss-fuzz. This includes adding a
 	better fuzzer with a seed corpus and adding automated tests of the
 	fuzzer with the test data.
